--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <canvas id="gameCanvas"></canvas>
   <p id="score">Score: 0 | High Score: 0</p>
 
+  <div id="mobile-controls">
+    <button onclick="moveLeft()" aria-label="Move Left">⬅️</button>
+    <button onclick="moveRight()" aria-label="Move Right">➡️</button>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
