--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cat Cafe Chaos</title>
+  <title>Cat Chaos</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🐾 Cat Cafe Chaos 🐾</h1>
+  <h1>🐾 Cat Chaos 🐾</h1>
   <p class="instructions">Use arrow keys (or tilt!) to move the cat and catch falling food!</p>
 
   <!-- Cat Selector -->
