--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
   <!-- Game Canvas -->
   <canvas id="gameCanvas"></canvas>
   <p id="score">Score: 0 | High Score: 0</p>
+  <p id="game-over-message" style="display: none;">💥 BOOM ROASTED 💥</p>
 
   <div id="mobile-controls">
     <button onclick="moveLeft()" aria-label="Move Left">⬅️</button>
     <button onclick="moveRight()" aria-label="Move Right">➡️</button>
   </div>
-  
+
   <script src="script.js"></script>
 </body>
 </html>
