--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     </div>
   </div>
 
+  <!-- Ball Speed -->
+  <div id="speed-picker">
+    <p>Choose Ball Speed:</p>
+    <button onclick="setSpeed('low')">🐢 Low</button>
+    <button onclick="setSpeed('medium')">🐱 Medium</button>
+    <button onclick="setSpeed('high')">🐆 High</button>
+  </div>
+  
   <!-- Game Canvas -->
   <canvas id="gameCanvas"></canvas>
   <p id="score">Score: 0 | High Score: 0</p>
